Fix icons vertical alignement

--- a/src/client/base.styl
+++ b/src/client/base.styl
@@ -21,10 +21,5 @@
         right 0
         opacity 15%
 
-/**
- * Online status icon
- */
-.online-status-icon
-    font-size 0.6rem
-    margin-right 0.4em
-    vertical-align middle
+svg
+    vertical-align -0.125em
